[package]
name = "rope-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
crdt-testdata = { git = "https://github.com/josephg/jumprope-rs", rev = "ae2a3f3" }
criterion = "0.5"
crop = { git = "https://github.com/noib3/crop" }
jumprope = { git = "https://github.com/josephg/jumprope-rs" }
ropey = { git = "https://github.com/cessen/ropey", default-features = false, features = ["simd"] }
zed-rope = { package = "rope", git = "https://github.com/zed-industries/zed" }
xi-rope = { git = "https://github.com/xi-editor/xi-editor" }

[[bench]]
name = "creation"
harness = false

[[bench]]
name = "editing"
harness = false

[[bench]]
name = "iterators"
harness = false

[[bench]]
name = "slicing"
harness = false
